Made the link between db , server and Frontend application
Made the link between db , server and Frontend application

--- a/Dev-talks-react/client/public/index.html
+++ b/Dev-talks-react/client/public/index.html
@@ -31,7 +31,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 <script src="https://kit.fontawesome.com/80b954ffb3.js" crossorigin="anonymous"></script>   
-<title>React App</title>
+<title>👩🏻‍💻Dev-talks🧑🏿‍💻</title>
     <style>
       * {
         font-family: 'Roboto', sans-serif;
